# taafi-agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
plugins/kafka/: Cargo.toml
plugins/kafka/src/: lib.rs
plugins/mongodb/: Cargo.toml
plugins/mongodb/src/: lib.rs
plugins/mysql/: Cargo.toml
plugins/mysql/src/: lib.rs
plugins/postgresql/: Cargo.toml
plugins/postgresql/src/: lib.rs
plugins/redis/: Cargo.toml
plugins/redis/src/: lib.rs
plugins/universal/: Cargo.toml
plugins/universal/src/: lib.rs
proto/: agent.proto
src/: agent.rs  cloud_provider.rs  config.rs  crypto_engine.rs  deadlock_detector.rs  fix_executor.rs  grpc_server.rs  heartbeat.rs  http_client.rs  logger.rs  main.rs  memory_engine.rs  metrics_collector.rs  models.rs  offline_queue.rs  plugin_loader.rs  plugin_manager.rs  sandbox_engine.rs
